Fix bugs | Clock